--- a/composer.json
+++ b/composer.json
@@ -1,54 +1,49 @@
 {
-	"name" : "symfony/framework-standard-edition",
-	"description" : "The \"Symfony Standard Edition\" distribution",
-	"type" : "project",
-	"license" : [
-		"MIT"
-	],
-	"require" : {
-		"symfony/symfony" : "2.2.*",
-		"twbs/bootstrap" : "dev-master",
-		"symfony/swiftmailer-bundle" : "2.2.*",
-		"doctrine/orm" : "~2.2,>=2.2.3",
-		"jms/security-extra-bundle" : "1.4.*",
-		"symfony/assetic-bundle" : "2.1.*",
-		"jms/di-extra-bundle" : "1.3.*",
-		"twig/extensions" : "1.0.*",
-		"php" : ">=5.3.3",
-		"sensio/generator-bundle" : "2.2.*",
-		"symfony/monolog-bundle" : "2.2.*",
-		"sensio/framework-extra-bundle" : "2.2.*",
-		"sensio/distribution-bundle" : "2.2.*",
-		"doctrine/doctrine-bundle" : "1.2.*"
-	},
-	"autoload" : {
-		"psr-0" : {
-			"" : "src/"
-		}
-	},
-	"minimum-stability" : "alpha",
-	"config" : {
-		"bin-dir" : "bin"
-	},
-	"scripts" : {
-		"post-update-cmd" : [
-			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
-			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
-			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
-			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
-		],
-		"post-install-cmd" : [
-			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
-			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
-			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
-			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
-		]
-	},
-	"extra" : {
-		"branch-alias" : {
-			"dev-master" : "2.2-dev"
-		},
-		"symfony-web-dir" : "web",
-		"symfony-app-dir" : "app"
-	}
+    "name": "symfony/framework-standard-edition",
+    "license": "MIT",
+    "type": "project",
+    "description": "The \"Symfony Standard Edition\" distribution",
+    "autoload": {
+        "psr-0": { "": "src/" }
+    },
+    "require": {
+        "php": ">=5.3.3",
+        "symfony/symfony": "2.2.*",
+        "doctrine/orm": "~2.2,>=2.2.3",
+        "doctrine/doctrine-bundle": "1.2.*",
+        "twig/extensions": "1.0.*",
+        "symfony/assetic-bundle": "2.1.*",
+        "symfony/swiftmailer-bundle": "2.2.*",
+        "symfony/monolog-bundle": "2.2.*",
+        "sensio/distribution-bundle": "2.2.*",
+        "sensio/framework-extra-bundle": "2.2.*",
+        "sensio/generator-bundle": "2.2.*",
+        "jms/security-extra-bundle": "1.4.*",
+        "jms/di-extra-bundle": "1.3.*"
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
+        ],
+        "post-update-cmd": [
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
+        ]
+    },
+    "config": {
+        "bin-dir": "bin"
+    },
+    "minimum-stability": "alpha",
+    "extra": {
+        "symfony-app-dir": "app",
+        "symfony-web-dir": "web",
+        "branch-alias": {
+            "dev-master": "2.2-dev"
+        }
+    }
 }
