--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -6,9 +6,9 @@ parameters:
     database_user: ADG
     database_password: root
     mailer_transport: smtp
-    mailer_host: 127.0.0.1
-    mailer_user: null
-    mailer_password: null
+    mailer_host: localhost
+    mailer_user: ADG
+    mailer_password: ADG
     locale: en
     secret: 13c3733a023c5e77a36bae6dff90b679
     database_path: null
