--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+arxiu:
+    resource: "@ArxiuBundle/Resources/config/routing.yml"
+    prefix:   /
+
 principal:
     resource: "@PrincipalBundle/Resources/config/routing.yml"
     prefix:   /
