--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+arrel:
+    pattern: /
+    defaults:
+        _controller:  PrincipalBundle:Default:index 
+
 arxiu:
     resource: "@ArxiuBundle/Resources/config/routing.yml"
     prefix:   /
@@ -6,10 +11,5 @@ principal:
     resource: "@PrincipalBundle/Resources/config/routing.yml"
     prefix:   /
     pattern:  
-    
-index:
-    pattern:  /index
-    defaults:  
-        _controller: PrincipalBundle:Default:index
-    
+
 
