User login #notWorking
Bad credentials
Also, added user menu with roles

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -13,3 +13,7 @@ principal:
     pattern:  
 
 
+user_routes:
+    resource: "@PrincipalBundle/Resources/config/routing_user.yml"
+    prefix:   /
+
