--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,39 +1,36 @@
-jms_security_extra:
-    secure_all_services: false
-    expressions: true
-    
 security:
     encoders:
-        ADG\PrincipalBundle\Entity\User: plaintext
+        FOS\UserBundle\Model\UserInterface: sha512
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
-        ROLE_SUPER_ADMIN: [ ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH ]
+        ROLE_SUPER_ADMIN: ROLE_ADMIN
 
     providers:
-       users:
-            entity: { class: Adg\PrincipalBundle\Entity\User }
-            
+        fos_userbundle:
+            id: fos_user.user_provider.username
+
     firewalls:
-        login:
+        main:
             pattern: ^/
-            anonymous: ~
-            http_basic: ~
             form_login:
-                login_path: login
-                check_path: login_check
+                provider: fos_userbundle
+                csrf_provider: form.csrf_provider
                 default_target_path: index
                 always_use_default_target_path: true
-            remember_me:
-                key: ADG
-                lifetime: 31536000
             logout:
-                path: logout
+                path: fos_user_security_logout
                 target: index
-     
+            anonymous:    true
+
     access_control:
-        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin/, role: ROLE_ADMIN }
         - { path: ^/normativa, roles: ROLE_USER }
+        
+
         
 
         
