--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,13 @@
 	"require" : {
 		"symfony/symfony" : "2.2.*",
 		"symfony/swiftmailer-bundle" : "2.2.*",
+		"friendsofsymfony/user-bundle" : "~2.0@dev",
 		"doctrine/orm" : "~2.2,>=2.2.3",
 		"jms/security-extra-bundle" : "1.4.*",
 		"symfony/assetic-bundle" : "2.1.*",
-		"knplabs/knp-menu-bundle" : "dev-master",
-		"jms/di-extra-bundle" : "1.3.*",
+		"knplabs/knp-menu-bundle" : "2.0.0-alpha1",
 		"twig/extensions" : "1.0.*",
+		"jms/di-extra-bundle" : "1.3.*",
 		"php" : ">=5.3.3",
 		"sensio/generator-bundle" : "2.2.*",
 		"symfony/monolog-bundle" : "2.2.*",
