--- a/src/ADG/ArxiuBundle/Resources/config/routing.yml
+++ b/src/ADG/ArxiuBundle/Resources/config/routing.yml
@@ -1,4 +1,10 @@
 arxiu:
-    pattern: /arxiu
+    pattern: /
     defaults:
-        _controller: ArxiuBundle:Default:arxiu     
+        _controller: ArxiuBundle:Default:arxiu
+        
+        
+altre:
+    pattern: /altre
+    defaults:
+        _controller: ArxiuBundle:Default:altre
