Installing CRUD generator, yet to adapt html

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -3,7 +3,7 @@ imports:
     - { resource: security.yml }
   
 framework:
-    translator: ~
+    translator: { fallback: ca }
     secret:  "%secret%"
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -23,6 +23,9 @@ framework:
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
+    form:
+        resources:
+            - LexikFormFilterBundle:Form:form_div_layout.html.twig
 
 # Assetic Configuration
 assetic:
