--- a/src/ADG/PrincipalBundle/Resources/config/routing_admin.yml
+++ b/src/ADG/PrincipalBundle/Resources/config/routing_admin.yml
@@ -1,4 +1,8 @@
 admin:
     pattern: /
     defaults:
-        _controller: PrincipalBundle:Admin:admin   
+        _controller: PrincipalBundle:Admin:admin
+        
+#PrincipalBundle_noticies:
+#        resource: "@PrincipalBundle/Resources/config/routing/noticies.yml"
+#        prefix:   /noticies
