--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,15 @@
 	],
 	"require" : {
 		"symfony/symfony" : "2.2.*",
-		"symfony/swiftmailer-bundle" : "2.2.*",
 		"friendsofsymfony/user-bundle" : "~2.0@dev",
+		"symfony/swiftmailer-bundle" : "2.2.*",
 		"doctrine/orm" : "~2.2,>=2.2.3",
 		"jms/security-extra-bundle" : "1.4.*",
+		"jordillonch/crud-generator" : "dev-master#d73b3c7aced44b19f663132dfdfb464451e2f9a7",
 		"symfony/assetic-bundle" : "2.1.*",
 		"knplabs/knp-menu-bundle" : "2.0.0-alpha1",
-		"twig/extensions" : "1.0.*",
 		"jms/di-extra-bundle" : "1.3.*",
+		"twig/extensions" : "1.0.*",
 		"php" : ">=5.3.3",
 		"sensio/generator-bundle" : "2.2.*",
 		"symfony/monolog-bundle" : "2.2.*",
