First try with Noticies persistence

--- a/src/ADG/PrincipalBundle/Resources/config/routing/noticies.yml
+++ b/src/ADG/PrincipalBundle/Resources/config/routing/noticies.yml
@@ -2,3 +2,8 @@ noticies_index:
     pattern: /
     defaults:
         _controller: PrincipalBundle:Noticies:index
+        
+noticies_crear:
+    pattern:  /crear
+    defaults: { _controller: "PrincipalBundle:Noticies:crear" }
+    requirements: { _method: post }
