Starting ArxiuGuia: Structure

--- a/src/ADG/ArxiuBundle/Resources/config/routing.yml
+++ b/src/ADG/ArxiuBundle/Resources/config/routing.yml
@@ -8,3 +8,8 @@ altre:
     pattern: /altre
     defaults:
         _controller: ArxiuBundle:Default:altre
+        
+guia_routes:
+    resource: "@ArxiuBundle/Resources/config/routing/guia.yml"
+    prefix:   /guia                  
+        
