ArxiuGuia new controller, TODO twig

--- a/src/ADG/ArxiuBundle/Resources/config/routing/guia.yml
+++ b/src/ADG/ArxiuBundle/Resources/config/routing/guia.yml
@@ -3,12 +3,7 @@ guia:
     defaults:
         _controller: ArxiuBundle:Guia:guia
 
-fons:
-    pattern: /{fons}
+search:
+    pattern: /search/{id}
     defaults:
-        _controller: ArxiuBundle:Guia:fons
-        
-sub:
-    pattern: /{selSub}
-    defaults:
-        _controller: ArxiuBundle:Guia:sub        
+        _controller: ArxiuBundle:Guia:search
