--- a/src/ADG/ArxiuBundle/Resources/config/routing/guia.yml
+++ b/src/ADG/ArxiuBundle/Resources/config/routing/guia.yml
@@ -4,6 +4,6 @@ guia:
         _controller: ArxiuBundle:Guia:guia
 
 search:
-    pattern: /search/{id}/
+    pattern: /busca/{id}/
     defaults:
         _controller: ArxiuBundle:Guia:search
