Starting admin side for GuiaArxiu

--- a/src/ADG/PrincipalBundle/Resources/config/routing/admin.yml
+++ b/src/ADG/PrincipalBundle/Resources/config/routing/admin.yml
@@ -5,5 +5,9 @@ admin:
                    
 noticies:
     resource: "@PrincipalBundle/Resources/config/routing/noticies.yml"
-    prefix:   /noticies            
+    prefix:   /noticies
+    
+admin_guia:
+    resource: "@PrincipalBundle/Resources/config/routing/guia.yml"
+    prefix:   /guia                      
         
