--- a/src/ADG/PrincipalBundle/Resources/config/routing/guia.yml
+++ b/src/ADG/PrincipalBundle/Resources/config/routing/guia.yml
@@ -1,12 +1,20 @@
-admin_guia:
-    pattern: /
-    defaults:
-        _controller: ArxiuBundle:Guia:guia
-        
-guia_afegir:
-    pattern:  /afegir
-    defaults: { _controller: "PrincipalBundle:AdminGuia:crear" }
-    requirements: { _method: post }
+guia_nou:
+    pattern:  /nou/{id}
+    defaults: { _controller: "PrincipalBundle:AdminGuia:nou" }
+    
+guia_nou_confirmar:
+    pattern:  /nou/confirmar
+    defaults: { _controller: "PrincipalBundle:AdminGuia:nouConfirmar" }
+    requirements: { _method: post }           
+
+guia_subnivell:
+    pattern:  /subnivell/{id}
+    defaults: { _controller: "PrincipalBundle:AdminGuia:subnivell" }
+    
+guia_subnivell_confirmar:
+    pattern:  /subnivell/confirmar
+    defaults: { _controller: "PrincipalBundle:AdminGuia:subnivellConfirmar" }
+    requirements: { _method: post }        
 
 guia_editar:
     pattern:  /{id}/editar
