--- a/src/ADG/ArxiuBundle/Resources/config/routing.yml
+++ b/src/ADG/ArxiuBundle/Resources/config/routing.yml
@@ -3,7 +3,6 @@ arxiu:
     defaults:
         _controller: ArxiuBundle:Default:arxiu
         
-        
 altre:
     pattern: /altre
     defaults:
@@ -11,5 +10,9 @@ altre:
         
 guia_routes:
     resource: "@ArxiuBundle/Resources/config/routing/guia.yml"
-    prefix:   /guia                  
+    prefix:   /guia      
+    
+fons_routes:
+    resource: "@ArxiuBundle/Resources/config/routing/fons.yml"
+    prefix:   /fons                      
         
