Starting fons cerca

--- a/src/ADG/ArxiuBundle/Resources/config/routing/fons.yml
+++ b/src/ADG/ArxiuBundle/Resources/config/routing/fons.yml
@@ -7,3 +7,9 @@ fons_select:
     pattern: /{seleccio}
     defaults:
         _controller: ArxiuBundle:Fons:select
+        
+fons_cercar:
+    pattern: /{seleccio}/cercar
+    defaults:
+        _controller: ArxiuBundle:Fons:cercar
+    requirements: { _method: post }  
