Added blank BibliotecaBundle

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+adg_biblioteca:
+    resource: "@ADGBibliotecaBundle/Resources/config/routing.yml"
+    prefix:   /biblioteca
+
 arrel:
     pattern: /
     defaults:
