--- a/composer.json
+++ b/composer.json
@@ -6,20 +6,20 @@
 		"MIT"
 	],
 	"require" : {
-		"symfony/symfony" : "2.2.*",
-		"symfony/swiftmailer-bundle" : "2.2.*",
+		"symfony/symfony" : "2.4.0-beta2",
+		"symfony/swiftmailer-bundle" : "2.3.4",
 		"friendsofsymfony/user-bundle" : "~2.0@dev",
-		"doctrine/orm" : "~2.2,>=2.2.3",
-		"jms/security-extra-bundle" : "1.4.*",
-		"symfony/assetic-bundle" : "2.1.*",
+		"doctrine/orm" : "2.4.x-dev",
+		"jms/security-extra-bundle" : "1.5.*",
+		"symfony/assetic-bundle" : "2.3.*",
 		"knplabs/knp-menu-bundle" : "2.0.0-alpha1",
 		"twig/extensions" : "1.0.*",
-		"jms/di-extra-bundle" : "1.3.*",
+		"jms/di-extra-bundle" : "1.4.*",
 		"php" : ">=5.3.3",
-		"sensio/generator-bundle" : "2.2.*",
-		"symfony/monolog-bundle" : "2.2.*",
-		"sensio/framework-extra-bundle" : "2.2.*",
-		"sensio/distribution-bundle" : "2.2.*",
+		"sensio/generator-bundle" : "2.3.*",
+		"symfony/monolog-bundle" : "2.4.*",
+		"sensio/framework-extra-bundle" : "2.3.*",
+		"sensio/distribution-bundle" : "2.3.*",
 		"doctrine/doctrine-bundle" : "1.2.*"
 	},
 	"autoload" : {
