Added search for cognoms semblants

--- a/src/ADG/ArxiuBundle/Resources/config/routing/dispenses.yml
+++ b/src/ADG/ArxiuBundle/Resources/config/routing/dispenses.yml
@@ -14,6 +14,11 @@ cerca_dispenses:
         _controller: ArxiuBundle:Dispenses:cercaDispenses         
     requirements: { _method: post }
     
+cerca_cognoms:
+    pattern: /cognoms/cerca/
+    defaults:
+        _controller: ArxiuBundle:Dispenses:cercaCognoms      
+    requirements: { _method: post }    
     
 dispenses_detall:
     pattern: /detall/{id}
