Added section: Documents i textos

--- a/src/ADG/ArxiuBundle/Resources/config/routing.yml
+++ b/src/ADG/ArxiuBundle/Resources/config/routing.yml
@@ -24,3 +24,6 @@ llistat_routes:
     resource: "@ArxiuBundle/Resources/config/routing/llistat.yml"
     prefix:   /llistat        
                
+documents_routes:
+    resource: "@ArxiuBundle/Resources/config/routing/documents.yml"
+    prefix:   /documents
