Added admin side to Parroquies

--- a/src/ADG/PrincipalBundle/Resources/config/routing/admin.yml
+++ b/src/ADG/PrincipalBundle/Resources/config/routing/admin.yml
@@ -17,5 +17,10 @@ admin_users:
     
 admin_fons:
     resource: "@PrincipalBundle/Resources/config/routing/fons.yml"
-    prefix:   /fons/{seleccio}                                        
+    prefix:   /fons/{seleccio}
+    
+admin_parroquies:
+    resource: "@PrincipalBundle/Resources/config/routing/parroquies.yml"
+    prefix:   /parroquies  
+                                            
         
