--- a/src/ADG/PrincipalBundle/Resources/config/routing/admin.yml
+++ b/src/ADG/PrincipalBundle/Resources/config/routing/admin.yml
@@ -23,4 +23,6 @@ admin_parroquies:
     resource: "@PrincipalBundle/Resources/config/routing/parroquies.yml"
     prefix:   /parroquies  
                                             
-        
+admin_documents:
+    resource: "@PrincipalBundle/Resources/config/routing/documents.yml"
+    prefix:   /documents        
