Updated index with multiple primary key

--- a/src/ADG/ArxiuBundle/Resources/config/routing/llistat.yml
+++ b/src/ADG/ArxiuBundle/Resources/config/routing/llistat.yml
@@ -20,6 +20,6 @@ veure_lloc:
         _controller: ArxiuBundle:Llistat:veureLloc    
         
 llistat_detall:
-    pattern: /detall/{id}
+    pattern: /detall/{nom}/{id}
     defaults:
         _controller: ArxiuBundle:Llistat:detall    
