Fixed security problem
Unlogged users could see some data

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -22,8 +22,10 @@ security:
             anonymous:    true
 
     access_control:
-        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/admin/, role: ROLE_ADMIN }
+        - { path: ^/ca/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/ca/admin/, role: ROLE_ADMIN }
+        - { path: ^/fr/admin/, role: ROLE_ADMIN }
+        - { path: ^/es/admin/, role: ROLE_ADMIN }
         
 
         
